# blender_studio

./: .env.example  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierignore  .stylelintignore  README.md  deploy.sh  manage.py  manage.sh  mypy.ini  package-lock.json  package.json  pyproject.toml  setup.cfg  sf_takes_paths.csv  stylelint.config.js  test.sh  update_and_restart.sh
blog/: admin.py  apps.py  models.py  queries.py  resource.py  signals.py  translation.py  urls.py
characters/: __init__.py  admin.py  apps.py  models.py  queries.py  resource.py  signals.py  translation.py  urls.py
cloud_import/: apps.py
comments/: admin.py  apps.py  models.py  queries.py  signals.py  typed_templates.py  urls.py
common/: __init__.py  admin.py  context_processors.py  decorators.py  google_trans.py  help_texts.py  history.py  mailgun.py  markdown.py  markdown_renderers.py  mixins.py  models.py  queries.py  serializers.py  shortcodes.py  storage.py  types.py  upload_paths.py  validators.py
docs/: architecture.md  development.md  miscellaneous.md  production.md  resetting_migrations.md  search.md
emails/: admin.py  models.py  util.py
films/: __init__.py  apps.py  queries.py  resource.py  signals.py  translation.py  urls.py
logentry_admin/: admin.py
payments/: admin.py  models.py  urls.py  views.py
playbooks/: README.md  ansible.cfg  ansible.sh  deploy.yaml  deploy_pipeline_docs.yaml  download_maxmind_db.yaml  install.yaml  install_meilisearch.yaml  requirements.txt  setup_certificate.yaml  vars_common.yaml
profiles/: apps.py
search/: __init__.py  apps.py  health_check.py  signals.py  urls.py  views.py
source_upload/: apps.py  urls.py  views.py
static_assets/: __init__.py  admin.py  apps.py  resource.py  serializers.py  tasks.py  urls.py  views.py  viewsets.py
stats/: models.py  urls.py  views.py
store_import/: README.md  apps.py  config.xml  load_store_backup.sh
studio/: settings.example.py  settings.py  settings_common.py  urls.py  wsgi.py
subscriptions/: admin.py  apps.py  common_email_domains.txt  form_fields.py  form_widgets.py  forms.py  middleware.py  models.py  queries.py  signals.py  tasks.py  urls.py  validators.py
training/: __init__.py  admin.py  apps.py  (+8 more)
(+642 files in other folders)
